Introduce vstorage work scheme
Signed-off-by: Alexander Burluka <aburluka@virtuozzo.com>

--- a/vzstorage-pd/class.yaml
+++ b/vzstorage-pd/class.yaml
@@ -4,4 +4,6 @@ metadata:
   name: virtuozzo-storage
 provisioner: kubernetes.io/virtuozzo-storage
 parameters:
-        volumePath: "/mnt/vstorage/kube/"
+  volumePath: "/mnt/vstorage/kube/"
+  secretNamespace: "default"
+  secretName: "virtuozzo-secret"
